# el7008-HW2

./: CMakeLists.txt  Puntajes_tarea_2_2018.docx  Tarea2_2018_v3.doc  main.cpp
